tests/golden/repl/debug-error.stderr
F u g u e   R E G O   T o o l k i t
fregot v0.13.0 repl - use :help for usage info
Set breakpoint at debug_error.test_crash
fregot (eval error):
  "debug-error.rego" (line 5, column 3):
  builtin error:

    5|   x + input.msg with input as {"msg": "crash"}
         ^^^^^^^^^^^^^

  Expected number but got string

  Stack trace:
    rule debug_error.test_crash at data.debug_error.test_crash:1:1
fregot (eval error):
  "debug-error.rego" (line 5, column 3):
  builtin error:

    5|   x + input.msg with input as {"msg": "crash"}
         ^^^^^^^^^^^^^

  Expected number but got string

  Stack trace:
    rule debug_error.test_crash at data.debug_error.test_crash:1:1
